# KiLib-OSS

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COPYRIGHT  KiLib-OSS.gocd.yaml  README.md  format.sh
.githooks/: pre-commit
.github/workflows/: cmake.yml
CMake/: CPM.cmake  CodeCoverage.cmake  GitPreCommitHook.cmake.in  GoogleTestSetup.cmake.in  Gtest.cmake  KiLibConfig.cmake.in  KiLibOptions.cmake  KiLibTest.cmake.in  Sources.cmake.in  eigen.cmake.in  gcem.cmake.in  gdal.cmake.in  gen_oras_config.sh  libtiff.cmake  libtiff.cmake.in  spdlog.cmake  spdlog.cmake.in  stats.cmake  stats.cmake.in  target_sources_test.cmake  yaml-cpp.cmake.in
KiLib/: CMakeLists.txt  Constants.hpp  KiLib.hpp
KiLib/Exceptions/: InvalidArgument.hpp  NotGenerated.hpp  NotImplemented.hpp  VectorSize.hpp
KiLib/Hydrology/: BaseHydrology.cpp  BaseHydrology.hpp  BaseInfiltration.cpp  BaseInfiltration.hpp  Bonetti2021.cpp  Bonetti2021.hpp  CMakeLists.txt  Hydrology.hpp  Iverson2000.cpp  Iverson2000.hpp  Iverson2000STST.cpp  Iverson2000STST.hpp  Stone2008.cpp  Stone2008.hpp  TOPOG.cpp  TOPOG.hpp  TopModel.cpp  TopModel.hpp
KiLib/Raster/: CMakeLists.txt  Cell.hpp  ComputeSlope.cpp  DOKSparseRaster.hpp  IRaster.hpp  Raster.cpp  Raster.hpp  Raster.test.cpp  RasterAccess.cpp  RasterIO.cpp  RasterIO.test.cpp  RasterIterators.hpp  RasterNew.cpp  RasterNew.hpp  RasterNew.test.cpp  RasterNewAccess.cpp  RasterNewIterators.hpp  RasterNewScience.cpp  RasterNewStats.cpp  RasterNewUtils.cpp  RasterScience.cpp  RasterStats.cpp  RasterUtils.cpp  Raster_DEM.cpp  Raster_TIFF.cpp  SparseRaster.hpp
KiLib/Raster/IO/: CMakeLists.txt  RasterIO.test.cpp  RasterNewIO.test.cpp  RasterNew_DEM.cpp  RasterNew_TIFF.cpp  Raster_DEM.cpp  Raster_TIFF.cpp
KiLib/Rasters/: CMakeLists.txt  Cell.hpp  ComputeSlope.cpp  DenseRaster.cpp  DenseRaster.hpp  FromFile.hpp  IRaster.hpp  MetadataRaster.hpp  Raster.cpp  Raster.hpp  RasterIterator.hpp  SparseRaster.hpp  SparseRaster_Vector.cpp  SparseRaster_Vector.hpp
KiLib/Rasters/IO/: CMakeLists.txt  Raster_DEM.cpp  Raster_DEM.hpp  Raster_NetCDF.hpp  Raster_TIFF.cpp  Raster_TIFF.hpp
KiLib/SoilDepth/: BaseSoilDepth.cpp  BaseSoilDepth.hpp  CMakeLists.txt  LinInterpDepth.cpp  LinInterpDepth.hpp  SoilDepth.cpp  SoilDepth.hpp  TopModel.cpp  TopModel.hpp
KiLib/Soils/: CMakeLists.txt  Decorators.test.cpp  DensityDryGen.hpp  DensityWetCalc.hpp  DistributionModel.hpp  FieldCapacityCalc.hpp  PorosityCalc.hpp  ResidualWaterContentCalc.hpp  Soil.cpp  Soil.hpp  Soil.test.cpp  SoilType.cpp  SoilType.hpp  Soils.hpp  UserDefined.cpp  UserDefined.hpp  UserDefined.test.cpp  ch.hpp  cl.hpp  gc.hpp  gm.hpp  gmgl.hpp  gp.hpp  gw.hpp  mh.hpp  ml.hpp  oh.hpp  ol.hpp  ruedlingen.hpp  sc.hpp  sm.hpp  sp.hpp  sw.hpp
KiLib/Stability/: CMakeLists.txt  Stability.hpp
KiLib/Stability/SafetyFactor/: CMakeLists.txt  MDSTAB.cpp  MDSTAB.hpp  SafetyFactor.cpp  SafetyFactor.hpp
KiLib/Utils/: AbstractFactory.hpp  Attribute.hpp  CMakeLists.txt  CSVReader.cpp  CSVReader.hpp  CSVReader.test.cpp  Container2d.hpp  Container2d.test.cpp  Distributions.hpp  NewtonRaphson.cpp  NewtonRaphson.hpp  NewtonRaphson.test.cpp  Random.cpp  Random.hpp  Random.test.cpp  SafeAttribute.hpp  SafeDouble.hpp  Sequence.hpp  Sequence.test.cpp  Singleton.hpp  StatisticalOutput.cpp  StatisticalOutput.hpp  StatisticalOutput.test.cpp  UnsafeDouble.hpp  Vec2.hpp  Vec3.hpp  Vec3.test.cpp  enum.hpp
resources/soiltypes/: ch.yaml  cl.yaml  gc.yaml  gm.yaml  gp.yaml  gw.yaml  mh.yaml  ml.yaml  oh.yaml  ol.yaml  sc.yaml  sm.yaml  sp.yaml  sw.yaml
test/: CMakeLists.txt  RootModelDistribution.test.hpp  RootModelReinforcement.test.hpp  goldValues.hpp  main.cpp
test/CMake/: GoogleTest.cmake.in  GoogleTestSetup.cmake.in
test/ComputeSlope/: 5x5_slope.dem  7x3.dem  7x3_NODATA.dem  7x7.dem  7x7_CA.dem  7x7_InterpTest.dem  7x7_InterpTestGroundTruth.dem  7x7_slope.dem  validRast1.dem  validRast2.dem
test/Raster/: CMakeLists.txt  Raster.test.cpp
test/Rasters/: CMakeLists.txt  IRaster.test.cpp  Raster.test.cpp  RasterIterator.test.cpp  SparseRaster.test.cpp
test/Soils/: CMakeLists.txt  Decorators.test.cpp  Soil.test.cpp  UserDefined.test.cpp
test/TIFF/: 5x5.tif  out.dem
test/Utils/: CMakeLists.txt  CSVReader.test.cpp  NewtonRaphson.test.cpp
test/example/: CMakeLists.txt  Example.test.cpp
